B3D 2.9, Eevee: Normals Render pass polygons disappearing after second time chose same Viewport Viewpoint via Menu or from Numpad. #78704

Closed
opened 2020-07-07 13:31:14 +02:00 by Vlad Kuzmin · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-05 20:45, hash: baf124c753
Worked: weeks ago master builds not had this issue. 2.83.1 also work correctly

Short description of error
B3D 2.9, Eevee: Normals Render pass polygons disappearing after second time chose same Viewport Viewpoint via Menu or from Numpad.

First click Num1
image.png

Second click Num1
image.png

Exact steps for others to reproduce the error
Open Blender.
Add UV sphere or any other object.
Switch to Material Preview or Render Viewport shading.
Switch Render Pass to Normals
Click Numpad 1.
Click Numpad 1 again.
Polygons become transparent?

Or choose Viewport Viwpoint Top
And choose Viewport Viwpoint Top again.

If you switch to another viwpoint or just rotate view polygons become visible again.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-05 20:45, hash: `baf124c753` Worked: weeks ago master builds not had this issue. 2.83.1 also work correctly **Short description of error** B3D 2.9, Eevee: Normals Render pass polygons disappearing after second time chose same Viewport Viewpoint via Menu or from Numpad. First click Num1 ![image.png](https://archive.blender.org/developer/F8675308/image.png) Second click Num1 ![image.png](https://archive.blender.org/developer/F8675326/image.png) **Exact steps for others to reproduce the error** Open Blender. Add UV sphere or any other object. Switch to Material Preview or Render Viewport shading. Switch Render Pass to Normals Click Numpad 1. Click Numpad 1 again. Polygons become transparent? Or choose Viewport Viwpoint Top And choose Viewport Viwpoint Top again. If you switch to another viwpoint or just rotate view polygons become visible again.
Author

Added subscriber: @ssh4

Added subscriber: @ssh4
Member

Added subscribers: @Jeroen-Bakker, @lichtwerk

Added subscribers: @Jeroen-Bakker, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

@Jeroen-Bakker : mind checking?

Can confirm. @Jeroen-Bakker : mind checking?
Jeroen Bakker self-assigned this 2020-07-13 13:17:50 +02:00
Member

Seems like when the viewport doesn't change that the normal pass isn't recalculated. When using DEBUG=3 (will display the normal input buffer) it is already empty.

Seems like when the viewport doesn't change that the normal pass isn't recalculated. When using DEBUG=3 (will display the normal input buffer) it is already empty.

This issue was referenced by 0b100e21fb

This issue was referenced by 0b100e21fbf99119d203187f6e728e728a1733f2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78704
No description provided.